# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arib"
version = "0.7.2"
description = "ARIB MPEG-2 TS Closed Caption Decoding Tools"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "John O'Neil", email = "oneil.john@gmail.com" }]
keywords = ["Japanese", "Closed Caption", "arib", "b-24", "MPEG", "TS", "PES"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Conversion",
]

dependencies = [
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/johnoneil/arib"
Source = "https://github.com/johnoneil/arib"
Issues = "https://github.com/johnoneil/arib/issues"

[project.entry-points."console_scripts"]
arib-ts2ass = "arib.ts2ass:main"
arib-ts-extract = "arib.ts_extract:main"
arib-es-extract = "arib.es_extract:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs", "examples"]


[project.optional-dependencies]
dev = [
  "black==24.8.0",
  "pre-commit==3.8.0",
  "ruff==0.6.7",
]

[tool.black]
line-length = 100
target-version = ["py312"]
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py39"  # or whatever version you run

[tool.ruff.lint]
select = ["E", "F", "W"]   # pycodestyle/pyflakes/warnings
ignore = []